  antfarm.foo();
  // reference to 'antfarm' remains in global namespace, possibly
  // after the dockable is closed

}}}
{{{ Miscellaneous

- Removed the "synchronized scrolling" option which hasn't actually
  worked since 4.2pre1 or 4.2pre2. If you liked this feature, you can
  write a plugin that does the same thing pretty easily.

- The kill ring is saved between editing sessions.

}}}
{{{ Optimizations

- Faster regular expression search and replace.

}}}
{{{ Bug Fixes

- Changing the no modifier click action for the gutter didn't work.

- The 'jedit' script was not being created on Unix.

- Fixed AltGR key on certain JVMs that send it as Control+Alt.

- Regular expression replace didn't work with certain regular
  expressions.

- When deep indent is on, indentation of code like this is handled a bit
  better:

  if(foo
     bar)
  {

  However it is still not 100% correct.

- Added an option for the "deep indent" setting to the Editing option
  pane.

- "Save as" did not update the buffer map properly if buffer sorting was
  switched off, or if symbolic links were involved.

- Heredocs in PHP are <<< not <<.

- Position code was incorrectly balancing the tree, and this caused
  various problems such as hangs and various exceptions.

- jEdit would do a two-stage save for settings files, but it would still
  delete the old file if the save failed, thus settings could be lost of
  the disk is almost full, etc. Now, files are only overwritten if the
  new settings are saved successfully.

}}}
{{{ API Changes

- SearchMatcher.nextMatch() returns an instance of SearchMatcher.Match
  instead of a two-element integer array.

}}}

}}}

{{{ Version 4.2pre3

Thanks to Brad Mace, Brant Langer Gurganus, Christoph Daniel Schulze,
Jonathan Revusky, Ken Turner, Kris Kopicki and Ollie Rutherfurd for
contributing to this release.

{{{ Editing

- The kill ring no longer shows duplicate entries, or entries that
  consist entirely of whitespace.
